add global styles

--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Cinzel+Decorative:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS Global -->
+    <link rel="stylesheet" href="global.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="./images/logo.svg" alt="logo of dragon" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="">storyline</a></li>
-          <li><a href="">score</a></li>
-          <li><a href="">contacts</a></li>
-        </ul>
-      </nav>
-      <div class="site-theme">
-        <img src="./images/mode-symbol.svg" alt="mode icon" />
+      <div class="inner-header">
+        <div class="logo">
+          <img src="./images/logo.svg" alt="logo of dragon" width="30px" />
+        </div>
+        <nav>
+          <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">storyline</a></li>
+            <li><a href="">score</a></li>
+            <li><a href="">contacts</a></li>
+          </ul>
+        </nav>
+        <div class="site-theme">
+          <img src="./images/mode-symbol.svg" alt="mode icon" width="30px" />
+        </div>
       </div>
     </header>
     <main>
@@ -47,48 +58,50 @@
       </section>
     </main>
     <footer>
-      <div class="copy-right">
-        <p>©TheSleepingDragon 2025</p>
-      </div>
-      <div class="social-media">
-        <ul>
-          <li>
-            <a
-              href="https://www.youtube.com/"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><img
-                src="./images/youtube.svg"
-                alt="youtube logo"
-                width="30px"
-                class="social-logo"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com/"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><img
-                src="./images/facebook.svg"
-                alt="facebook logo"
-                width="30px"
-                class="social-logo"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><img
-                src="./images/instagram.svg"
-                alt="instagram logo"
-                width="30px"
-                class="social-logo"
-            /></a>
-          </li>
-        </ul>
+      <div class="inner-footer">
+        <div class="copy-right">
+          <p>©TheSleepingDragon 2025</p>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a
+                href="https://www.youtube.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/youtube.svg"
+                  alt="youtube logo"
+                  width="30px"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/facebook.svg"
+                  alt="facebook logo"
+                  width="30px"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/instagram.svg"
+                  alt="instagram logo"
+                  width="30px"
+                  class="social-logo"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
