--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         <div class="site-theme">
           <img src="./images/mode-symbol.svg" alt="mode icon" width="30px" />
         </div>
+        <div class="hamburger-menu">
+          <img
+            src="./images/hamburger-menu.svg"
+            alt="hamburger menu icon"
+            width="30px"
+          />
+        </div>
       </div>
     </header>
     <main>
