--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
     <script defer src="./main.js"></script>
+    <!-- Material Icon CDN -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +25,7 @@
     <header>
       <div class="inner-header">
         <div class="logo">
-          <img src="./images/logo.svg" alt="logo of dragon" width="30px" />
+          <img src="./images/logo.svg" alt="logo of dragon" width="24px" />
         </div>
         <nav>
           <ul>
@@ -31,14 +36,11 @@
           </ul>
         </nav>
         <div class="site-theme">
-          <img src="./images/mode-symbol.svg" alt="mode icon" width="30px" />
+          <span class="material-icons"> light_mode </span>
         </div>
         <div class="hamburger-menu" id="hamburger-menu">
-          <img
-            src="./images/hamburger-menu.svg"
-            alt="hamburger menu icon"
-            width="30px"
-          />
+          <span class="material-icons"> reorder </span>
+          <span class="material-icons close-menu-btn"> close </span>
         </div>
 
         <!-- check if this can stay here -->
