improve hamburger menu visual

--- a/index.html
+++ b/index.html
@@ -28,24 +28,20 @@
           <img src="./images/logo.svg" alt="logo of dragon" width="24px" />
         </div>
         <nav>
-          <ul>
+          <ul class="menu">
             <li><a href="">home</a></li>
             <li><a href="">storyline</a></li>
             <li><a href="">score</a></li>
             <li><a href="">contacts</a></li>
           </ul>
         </nav>
-        <div class="site-theme">
+        <button class="site-theme" type="button">
           <span class="material-icons"> light_mode </span>
-        </div>
-        <div class="hamburger-menu" id="hamburger-menu">
+        </button>
+        <button class="hamburger-menu" id="hamburger-menu" type="button">
           <span class="material-icons"> reorder </span>
           <span class="material-icons close-menu-btn"> close </span>
-        </div>
-
-        <!-- check if this can stay here -->
-        <!-- opens the hamburger menu on smaller screens -->
-        <div class="menu" id="menu"></div>
+        </button>
       </div>
     </header>
     <main>
@@ -87,7 +83,7 @@
                 ><img
                   src="./images/youtube.svg"
                   alt="youtube logo"
-                  width="30px"
+                  width="24px"
                   class="social-logo"
               /></a>
             </li>
@@ -99,7 +95,7 @@
                 ><img
                   src="./images/facebook.svg"
                   alt="facebook logo"
-                  width="30px"
+                  width="24px"
                   class="social-logo"
               /></a>
             </li>
@@ -111,7 +107,7 @@
                 ><img
                   src="./images/instagram.svg"
                   alt="instagram logo"
-                  width="30px"
+                  width="24px"
                   class="social-logo"
               /></a>
             </li>
