add hamburger menu toggle functionality

--- a/index.html
+++ b/index.html
@@ -33,14 +33,28 @@
             <li><a href="">storyline</a></li>
             <li><a href="">score</a></li>
             <li><a href="">contacts</a></li>
+            <li>
+              <a href=""
+                ><span class="material-icons display-light-mode">
+                  light_mode
+                </span></a
+              >
+            </li>
           </ul>
         </nav>
         <button class="site-theme" type="button">
           <span class="material-icons"> light_mode </span>
         </button>
         <button class="hamburger-menu" id="hamburger-menu" type="button">
-          <span class="material-icons"> reorder </span>
-          <span class="material-icons close-menu-btn"> close </span>
+          <span
+            class="material-icons hamburger-menu-icon"
+            id="hamburger-menu-icon"
+          >
+            reorder
+          </span>
+          <span class="material-icons close-menu-icon" id="close-menu-icon">
+            close
+          </span>
         </button>
       </div>
     </header>
