change font size and center menu items

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <nav>
           <ul class="menu">
-            <li><a href="">home</a></li>
-            <li><a href="">storyline</a></li>
-            <li><a href="">score</a></li>
-            <li><a href="">contacts</a></li>
+            <li><a href="./index.html">home</a></li>
+            <li><a href="./storyline.html">storyline</a></li>
+            <li><a href="./score.html">score</a></li>
+            <li><a href="./contact.html">contacts</a></li>
             <li>
               <a href=""
                 ><span class="material-icons display-light-mode">
