--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     />
     <!-- CSS Global -->
     <link rel="stylesheet" href="global.css" />
+    <!-- CSS INDEX -->
+    <link rel="stylesheet" href="index.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
@@ -69,7 +71,7 @@
           </div>
           <div class="mode">
             <h3>timed</h3>
-            <p>Challenge yourself with times mode</p>
+            <p>Challenge yourself with timed mode</p>
           </div>
           <div class="mode">
             <h3>category</h3>
