add difficulty level modal

--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
           </div>
         </div>
       </section>
+
+      <!-- Classical Mode - Difficulty Levels Modal -->
+      <section class="difficulty-level-modal">
+        <button>
+          <span class="material-icons difficulty-lvl-close-btn"> close </span>
+        </button>
+        <div class="difficulty-levels-container">
+          <div class="difficulty-level">Easy</div>
+          <div class="difficulty-level">Medium</div>
+          <div class="difficulty-level">Difficult</div>
+        </div>
+      </section>
+
+      <!-- ------------------ -->
     </main>
     <footer>
       <div class="inner-footer">
