add gamePlay html structure

--- a/index.html
+++ b/index.html
@@ -101,6 +101,48 @@
         </div>
       </section>
 
+      <!--GAME PLAY -->
+
+      <section class="game-play-view">
+        <div class="game-play-header">
+          <!-- SCORE -->
+          <div class="score-container">
+            <ul>
+              <li>Score</li>
+              <li>Won: <span>0</span></li>
+              <li>Lost: <span>0</span></li>
+            </ul>
+          </div>
+
+          <!-- TITLE -->
+          <div class="title">
+            <h4>Title</h4>
+            <h5>Subtitle</h5>
+          </div>
+
+          <!-- HOME BTN -->
+          <button>🏠</button>
+        </div>
+
+        <!-- DRAGON EYES (GUESSES) -->
+        <div class="dragon-eye" id="dragon-eye"></div>
+
+        <!-- HINTS -->
+        <div class="hint">
+          <button class="hint-btn">Hint</button>
+          <p class="hint-definition"></p>
+        </div>
+
+        <!-- WORD TO GUESS  -->
+        <div class="word-tile" id="word-tile"></div>
+
+        <!-- QWERTY -->
+        <div class="qwerty" id="qwerty"></div>
+
+        <!-- PLAY AGAIN BTN -->
+        <button>play again</button>
+      </section>
+
       <!-- ------------------ -->
     </main>
     <footer>
