add gamePlay screen styling and qwery/tiles

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <!--GAME PLAY -->
 
-      <section class="game-play-view">
+      <section class="game-play-view" id="game-play-view">
         <div class="game-play-header">
           <!-- SCORE -->
           <div class="score-container">
@@ -116,12 +116,14 @@
 
           <!-- TITLE -->
           <div class="title">
-            <h4>Title</h4>
-            <h5>Subtitle</h5>
+            <h4>Classical - easy level</h4>
+            <p>8 guesses, free hints</p>
           </div>
 
           <!-- HOME BTN -->
-          <button>🏠</button>
+          <button type="button">
+            <span class="material-icons"> home </span>
+          </button>
         </div>
 
         <!-- DRAGON EYES (GUESSES) -->
