updated qwerty size

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="qwerty" id="qwerty"></div>
 
         <!-- PLAY AGAIN BTN -->
-        <button>play again</button>
+        <button type="button">play again</button>
       </section>
 
       <!-- ------------------ -->
