update gamePlay styling

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <!-- SCORE -->
           <div class="score-container">
             <ul>
-              <li>Score</li>
+              <li class="score">Score</li>
               <li>Won: <span>0</span></li>
               <li>Lost: <span>0</span></li>
             </ul>
@@ -117,13 +117,15 @@
           <!-- TITLE -->
           <div class="title">
             <h4>Classical - easy level</h4>
-            <p>8 guesses, free hints</p>
+            <p>8 guesses, free hint</p>
           </div>
 
           <!-- HOME BTN -->
-          <button type="button">
-            <span class="material-icons"> home </span>
-          </button>
+          <div class="home-btn">
+            <a href="./index.html"
+              ><span class="material-icons"> home </span></a
+            >
+          </div>
         </div>
 
         <!-- DRAGON EYES (GUESSES) -->
