--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h3>timed</h3>
             <p>Challenge yourself with timed mode</p>
           </div>
-          <div class="mode">
+          <div class="mode" id="category-mode">
             <h3>category</h3>
             <p>Choose from different categories - animals, sport etc</p>
           </div>
@@ -101,8 +101,25 @@
         </div>
       </section>
 
-      <!--GAME PLAY -->
+      <!-- Choose Category Modal -->
+      <section class="choose-category-modal" id="choose-category-modal">
+        <button>
+          <span
+            class="material-icons category-close-btn"
+            id="category-close-btn"
+          >
+            close
+          </span>
+        </button>
+        <div class="category-container">
+          <div class="category">Animals</div>
+          <div class="category">Sport</div>
+          <div class="category">Birds</div>
+          <div class="category">Countries</div>
+        </div>
+      </section>
 
+      <!--GAME PLAY -->
       <section class="game-play-view" id="game-play-view">
         <div class="game-play-header">
           <!-- SCORE -->
