--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3>category</h3>
             <p>Choose from different categories - animals, sport etc</p>
           </div>
-          <div class="mode">
+          <div class="mode" id="learning-mode">
             <h3>learning</h3>
             <p>Read the definition and guess the word</p>
           </div>
@@ -111,7 +111,7 @@
             close
           </span>
         </button>
-        <div class="category-container">
+        <div class="category-container" id="category-container">
           <div class="category">Animals</div>
           <div class="category">Sport</div>
           <div class="category">Birds</div>
