add hint definition

--- a/index.html
+++ b/index.html
@@ -156,8 +156,16 @@
 
         <!-- HINTS -->
         <div class="hint">
-          <button class="hint-btn">Hint</button>
-          <p class="hint-definition"></p>
+          <button class="hint-btn" id="hint-btn">Hint</button>
+        </div>
+
+        <!-- HINTS DEFINITION -->
+        <div class="definition" id="definition">
+          <p class="hint-definition">
+            A domesticated carnivorous mammal that typically has a long snout,
+            an acute sense of smell, non-retractable claws, and a barking,
+            howling, or whining voice
+          </p>
         </div>
 
         <!-- WORD TO GUESS  -->
