refactor css modal

--- a/index.html
+++ b/index.html
@@ -85,37 +85,37 @@
       </section>
 
       <!-- Classical Mode - Difficulty Levels Modal -->
-      <section class="difficulty-level-modal" id="difficulty-level-modal">
+      <section class="modal difficulty-level-modal" id="difficulty-level-modal">
         <button>
           <span
-            class="material-icons difficulty-lvl-close-btn"
+            class="material-icons modal-close-btn difficulty-lvl-close-btn"
             id="difficulty-lvl-close-btn"
           >
             close
           </span>
         </button>
-        <div class="difficulty-levels-container">
-          <div class="difficulty-level">Easy</div>
-          <div class="difficulty-level">Medium</div>
-          <div class="difficulty-level">Difficult</div>
+        <div class="difficulty-levels-container modal-container">
+          <div class="difficulty-level modal-el">Easy</div>
+          <div class="difficulty-level modal-el">Medium</div>
+          <div class="difficulty-level modal-el">Difficult</div>
         </div>
       </section>
 
       <!-- Choose Category Modal -->
-      <section class="choose-category-modal" id="choose-category-modal">
+      <section class="modal choose-category-modal" id="choose-category-modal">
         <button>
           <span
-            class="material-icons category-close-btn"
+            class="material-icons modal-close-btn category-close-btn"
             id="category-close-btn"
           >
             close
           </span>
         </button>
-        <div class="category-container" id="category-container">
-          <div class="category">Animals</div>
-          <div class="category">Sport</div>
-          <div class="category">Birds</div>
-          <div class="category">Countries</div>
+        <div class="category-container modal-container" id="category-container">
+          <div class="category modal-el">Animals</div>
+          <div class="category modal-el">Sport</div>
+          <div class="category modal-el">Birds</div>
+          <div class="category modal-el">Countries</div>
         </div>
       </section>
 
