add storyline content and styling

--- a/storyline.html
+++ b/storyline.html
@@ -19,6 +19,8 @@
     />
     <!-- CSS Global -->
     <link rel="stylesheet" href="global.css" />
+    <!-- CSS Storyline -->
+    <link rel="stylesheet" href="storyline.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
@@ -58,7 +60,60 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container">
+        <section class="storyline">
+          <h2>Storyline</h2>
+          <p>
+            In a forgotten land, deep beneath the mountains, sleeps a dragon.
+            The last of the great ones. His golden treasure lies hidden in his
+            cavern, between fire and shadow, protected by ancient words of
+            power.
+          </p>
+          <p>
+            To claim his treasure, you must unravel the secret word before the
+            dragon awakens. Each mistake stirs him from his slumber and brings
+            your closer to the flames.
+          </p>
+          <p>Chose your path, adventurer.</p>
+        </section>
+        <section class="rules">
+          <h2>Rules</h2>
+          <div class="rules-wrapper">
+            <div class="classical">
+              <h3>Classical</h3>
+              <ul>
+                <li><span>Easy</span> 8 lives, free hint</li>
+                <li><span>Medium</span> 6 lives, free hint</li>
+                <li><span>Difficult</span> 5 lives, no free hint</li>
+              </ul>
+            </div>
+            <div class="timed">
+              <h3>Timed</h3>
+              <p>
+                You have a limited time to guess the word before Dragon awakens
+                Each wrong guess shortens your remaining time Hints are
+                available but cost time instead of lives
+              </p>
+            </div>
+            <div class="category">
+              <h3>Category</h3>
+              <p>
+                Choose the name to guess from different categories Hints cost
+                lives
+              </p>
+            </div>
+            <div class="learning">
+              <h3>Learning</h3>
+              <p>
+                You are given a definition, and must name the word. Hints cost
+                lives
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <footer>
       <div class="inner-footer">
         <div class="copy-right">
