add json word list file

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
         </button>
         <div class="category-container modal-container" id="category-container">
           <div class="category modal-el">Animals</div>
-          <div class="category modal-el">Sport</div>
-          <div class="category modal-el">Birds</div>
-          <div class="category modal-el">Countries</div>
+          <div class="category modal-el">Gastronomy</div>
+          <div class="category modal-el">Geography</div>
+          <div class="category modal-el">Hobbies</div>
         </div>
       </section>
 
