--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
-    <script defer src="./main.js"></script>
+    <!-- <script defer src="./main.js"></script> -->
+    <script defer src="./index.js"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Material Icon CDN -->
