update game end functionality

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="qwerty" id="qwerty"></div>
 
         <!-- PLAY AGAIN BTN -->
-        <button type="button">play again</button>
+        <button type="button" id="play-again-btn" disabled>play again</button>
       </section>
 
       <!-- ------------------ -->
