add word definition

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           <div class="score-container">
             <ul>
               <li class="score">Score</li>
-              <li>Won: <span>0</span></li>
-              <li>Lost: <span>0</span></li>
+              <li>Won: <span id="score-won"></span></li>
+              <li>Lost: <span id="score-lost"></span></li>
             </ul>
           </div>
 
@@ -160,15 +160,15 @@
         <!-- HINTS -->
         <div class="hint">
           <button class="hint-btn" id="hint-btn">Hint</button>
-        </div>
 
-        <!-- HINTS DEFINITION -->
-        <div class="definition" id="definition">
-          <p class="hint-definition">
-            A domesticated carnivorous mammal that typically has a long snout,
-            an acute sense of smell, non-retractable claws, and a barking,
-            howling, or whining voice
-          </p>
+          <!-- HINT'S DEFINITION -->
+          <div class="definition" id="definition-container">
+            <p class="hint-definition" id="definition">
+              A domesticated carnivorous mammal that typically has a long snout,
+              an acute sense of smell, non-retractable claws, and a barking,
+              howling, or whining voice
+            </p>
+          </div>
         </div>
 
         <!-- WORD TO GUESS  -->
