--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- JS -->
-    <!-- <script defer src="./main.js"></script> -->
-    <script defer src="./index.js"></script>
+    <script defer src="./main.js"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Material Icon CDN -->
@@ -143,7 +142,7 @@
           <!-- HOME BTN -->
           <div class="home-btn">
             <a href="./index.html"
-              ><span class="material-icons"> home </span></a
+              ><span class="material-icons" id="home-btn"> home </span></a
             >
           </div>
         </div>
