--- a/score.html
+++ b/score.html
@@ -19,6 +19,8 @@
     />
     <!-- CSS Global -->
     <link rel="stylesheet" href="global.css" />
+    <!-- CSS Score -->
+    <link rel="stylesheet" href="score.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
@@ -58,7 +60,62 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <h1>Score</h1>
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Category</th>
+            <th scope="col">Won</th>
+            <th scope="col">Lost</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Classical</th>
+            <td>16</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <th scope="row">easy</th>
+            <td>8</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <th scope="row">medium</th>
+            <td>5</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <th scope="row">hard</th>
+            <td>6</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <th scope="row">Timed</th>
+            <td>2</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <th scope="row">Category</th>
+            <td>6</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <th scope="row">Learning</th>
+            <td>8</td>
+            <td>7</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th scope="row">Total</th>
+            <td>32</td>
+            <td>26</td>
+          </tr>
+        </tfoot>
+      </table>
+    </main>
     <footer>
       <div class="inner-footer">
         <div class="copy-right">
