update score page

--- a/score.html
+++ b/score.html
@@ -61,60 +61,64 @@
       </div>
     </header>
     <main>
-      <h1>Score</h1>
-      <table>
-        <thead>
-          <tr>
-            <th scope="col">Category</th>
-            <th scope="col">Won</th>
-            <th scope="col">Lost</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Classical</th>
-            <td>16</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <th scope="row">easy</th>
-            <td>8</td>
-            <td>3</td>
-          </tr>
-          <tr>
-            <th scope="row">medium</th>
-            <td>5</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <th scope="row">hard</th>
-            <td>6</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <th scope="row">Timed</th>
-            <td>2</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <th scope="row">Category</th>
-            <td>6</td>
-            <td>4</td>
-          </tr>
-          <tr>
-            <th scope="row">Learning</th>
-            <td>8</td>
-            <td>7</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <th scope="row">Total</th>
-            <td>32</td>
-            <td>26</td>
-          </tr>
-        </tfoot>
-      </table>
+      <div class="score-container">
+        <h1>Score</h1>
+        <div class="score-table-container">
+          <table class="score-table">
+            <thead>
+              <tr>
+                <th scope="col">Category</th>
+                <th scope="col">🏆 Won</th>
+                <th scope="col">❌Lost</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Classical</th>
+                <td>16</td>
+                <td>10</td>
+              </tr>
+              <tr>
+                <th scope="row">easy</th>
+                <td>8</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <th scope="row">medium</th>
+                <td>5</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <th scope="row">hard</th>
+                <td>6</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <th scope="row">Timed</th>
+                <td>2</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <th scope="row">Category</th>
+                <td>6</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <th scope="row">Learning</th>
+                <td>8</td>
+                <td>7</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th scope="row">Total</th>
+                <td>32</td>
+                <td>26</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="inner-footer">
