add easy cat score to scores page

--- a/score.html
+++ b/score.html
@@ -69,18 +69,13 @@
               <tr>
                 <th scope="col">Category</th>
                 <th scope="col">🏆 Won</th>
-                <th scope="col">❌Lost</th>
+                <th scope="col">❌ Lost</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">Classical</th>
-                <td>16</td>
-                <td>10</td>
-              </tr>
-              <tr>
                 <th scope="row">easy</th>
-                <td>8</td>
+                <td id="score-easy-won">8</td>
                 <td>3</td>
               </tr>
               <tr>
@@ -99,7 +94,22 @@
                 <td>5</td>
               </tr>
               <tr>
-                <th scope="row">Category</th>
+                <th scope="row">Animals</th>
+                <td>6</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <th scope="row">Gastranomy</th>
+                <td>6</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <th scope="row">Geography</th>
+                <td>6</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <th scope="row">Hobbies</th>
                 <td>6</td>
                 <td>4</td>
               </tr>
