work on pushing scores in score page

--- a/score.html
+++ b/score.html
@@ -69,61 +69,61 @@
               <tr>
                 <th scope="col">Category</th>
                 <th scope="col">🏆 Won</th>
-                <th scope="col">❌ Lost</th>
+                <th scope="col">⚔️ Lost</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">easy</th>
-                <td id="score-easy-won">8</td>
-                <td>3</td>
+                <td id="score-easy-won">0</td>
+                <td id="score-easy-lost">0</td>
               </tr>
               <tr>
                 <th scope="row">medium</th>
-                <td>5</td>
-                <td>2</td>
+                <td id="score-medium-won">0</td>
+                <td id="score-medium-lost">0</td>
               </tr>
               <tr>
                 <th scope="row">hard</th>
-                <td>6</td>
-                <td>5</td>
+                <td id="score-hard-won">0</td>
+                <td id="score-hard-lost">0</td>
               </tr>
               <tr>
                 <th scope="row">Timed</th>
-                <td>2</td>
-                <td>5</td>
+                <td id="score-timed-won">0</td>
+                <td id="score-timed-lost">0</td>
               </tr>
               <tr>
                 <th scope="row">Animals</th>
-                <td>6</td>
-                <td>4</td>
+                <td id="score-animals-won">0</td>
+                <td>0</td>
               </tr>
               <tr>
                 <th scope="row">Gastranomy</th>
-                <td>6</td>
-                <td>4</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
                 <th scope="row">Geography</th>
-                <td>6</td>
-                <td>4</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
                 <th scope="row">Hobbies</th>
-                <td>6</td>
-                <td>4</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
               <tr>
                 <th scope="row">Learning</th>
-                <td>8</td>
-                <td>7</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
             </tbody>
             <tfoot>
               <tr>
                 <th scope="row">Total</th>
-                <td>32</td>
-                <td>26</td>
+                <td>0</td>
+                <td>0</td>
               </tr>
             </tfoot>
           </table>
