refactor the score pushing to the table

--- a/score.html
+++ b/score.html
@@ -64,7 +64,7 @@
       <div class="score-container">
         <h1>Score</h1>
         <div class="score-table-container">
-          <table class="score-table">
+          <table class="score-table" id="score-table">
             <thead>
               <tr>
                 <th scope="col">Category</th>
