update sum up of the scores & fix issue with navigating the page and saving the score

--- a/score.html
+++ b/score.html
@@ -72,53 +72,7 @@
                 <th scope="col">⚔️ Lost</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">easy</th>
-                <td id="score-easy-won">0</td>
-                <td id="score-easy-lost">0</td>
-              </tr>
-              <tr>
-                <th scope="row">medium</th>
-                <td id="score-medium-won">0</td>
-                <td id="score-medium-lost">0</td>
-              </tr>
-              <tr>
-                <th scope="row">hard</th>
-                <td id="score-hard-won">0</td>
-                <td id="score-hard-lost">0</td>
-              </tr>
-              <tr>
-                <th scope="row">Timed</th>
-                <td id="score-timed-won">0</td>
-                <td id="score-timed-lost">0</td>
-              </tr>
-              <tr>
-                <th scope="row">Animals</th>
-                <td id="score-animals-won">0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <th scope="row">Gastranomy</th>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <th scope="row">Geography</th>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <th scope="row">Hobbies</th>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <th scope="row">Learning</th>
-                <td>0</td>
-                <td>0</td>
-              </tr>
-            </tbody>
+            <tbody id="table-body"></tbody>
             <tfoot>
               <tr>
                 <th scope="row">Total</th>
