--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     />
     <!-- CSS Global -->
     <link rel="stylesheet" href="global.css" />
+    <!-- CSS Contact -->
+    <link rel="stylesheet" href="contact.css" />
     <title>The Sleeping Dragon</title>
   </head>
   <body>
@@ -58,7 +60,61 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="container">
+        <div class="contact-wrapper">
+          <div class="dragon-eye">
+            <img src="./images/beast-eye.svg" alt="dragon image" width="45px" />
+          </div>
+          <h1>Contact Me</h1>
+          <p>Send word to the keeper of The Sleeping Dragon</p>
+          <form>
+            <div class="full-name">
+              <div class="form-field">
+                <label for="first-name">First name</label>
+                <input
+                  type="text"
+                  id="first-name"
+                  placeholder="Dragon"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="last-name">Last name</label>
+                <input
+                  type="text"
+                  id="last-name"
+                  placeholder="Keeper"
+                  required
+                />
+              </div>
+            </div>
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="dragon-keeper@dragon.com"
+              required
+            />
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              rows="5"
+              placeholder="What news do you bring to the dragon’s keeper?"
+              required
+            ></textarea>
+            <button type="button">Send</button>
+          </form>
+        </div>
+        <div class="img-wrapper">
+          <img
+            src="./images/quill-ink.svg"
+            alt="quill-ink image"
+            width="45px"
+          />
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="inner-footer">
         <div class="copy-right">
