add site theme change

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <li><a href="./contact.html">contacts</a></li>
             <li>
               <a href=""
-                ><span class="material-icons display-light-mode">
+                ><span class="material-icons display-light-mode theme">
                   light_mode
                 </span></a
               >
             </li>
           </ul>
         </nav>
-        <button class="site-theme" type="button">
+        <button class="site-theme theme" type="button">
           <span class="material-icons"> light_mode </span>
         </button>
         <button class="hamburger-menu" id="hamburger-menu" type="button">
