add timer and its functionality

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!-- TIMER -->
         <div class="timer-container" id="timer-container">
           <span class="material-icons"> timer </span>
-          <span class="timer">00 : 10</span>
+          <span class="timer" id="timer">00:45</span>
         </div>
 
         <!-- HINTS -->
