--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <li><a href="./index.html">home</a></li>
             <li><a href="./storyline.html">storyline</a></li>
             <li><a href="./score.html">score</a></li>
-            <li><a href="./contact.html">contacts</a></li>
+            <li><a href="./contact.html">contact</a></li>
             <li>
               <a href=""
                 ><span class="material-icons display-light-mode theme">
@@ -105,13 +105,6 @@
             ></textarea>
             <button type="button">Send</button>
           </form>
-        </div>
-        <div class="img-wrapper">
-          <img
-            src="./images/quill-ink.svg"
-            alt="quill-ink image"
-            width="45px"
-          />
         </div>
       </div>
     </main>
