--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="./index.html">home</a></li>
             <li><a href="./storyline.html">storyline</a></li>
             <li><a href="./score.html">score</a></li>
-            <li><a href="./contact.html">contacts</a></li>
+            <li><a href="./contact.html">contact</a></li>
             <li>
               <a href=""
                 ><span class="material-icons display-light-mode theme">
@@ -64,9 +64,10 @@
     </header>
     <main>
       <section class="home-view" id="home-view">
-        <h1>The Sleeping Dragon</h1>
-        <h2>Guess a secret word before the dragon awakens</h2>
-
+        <div class="title-wrapper">
+          <h1>The Sleeping Dragon</h1>
+          <h2>Guess a secret word before the dragon awakens</h2>
+        </div>
         <div class="game-modes">
           <div class="mode" id="classical-mode">
             <h3>classical</h3>
