add total sum to score page

--- a/score.html
+++ b/score.html
@@ -76,8 +76,8 @@
             <tfoot>
               <tr>
                 <th scope="row">Total</th>
-                <td>0</td>
-                <td>0</td>
+                <td id="total-won">0</td>
+                <td id="total-lost">0</td>
               </tr>
             </tfoot>
           </table>
