--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="index.css" />
     <title>The Sleeping Dragon</title>
   </head>
-  <body>
+  <body class="grey-theme">
     <header>
       <div class="inner-header">
         <div class="logo">
