refactor score code and update correct storyline description

--- a/score.html
+++ b/score.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="global.css" />
     <!-- CSS Score -->
     <link rel="stylesheet" href="score.css" />
-    <title>The Sleeping Dragon</title>
+    <title>The Sleeping Dragon - Score</title>
   </head>
   <body>
     <header>
