--- a/storyline.html
+++ b/storyline.html
@@ -82,32 +82,33 @@
           <div class="rules-wrapper">
             <div class="classical">
               <h3>Classical</h3>
-              <ul>
-                <li><span>Easy</span> 8 lives, free hint</li>
-                <li><span>Medium</span> 6 lives, free hint</li>
-                <li><span>Difficult</span> 5 lives, no free hint</li>
-              </ul>
+              <p>
+                Three levels of difficulty - Easy, Medium and Difficult. With
+                each level, words get more longer and complicated. Easy level
+                has free hint while use of hint in Medium and Difficult cost one
+                life.
+              </p>
             </div>
             <div class="timed">
               <h3>Timed</h3>
               <p>
-                You have a limited time to guess the word before Dragon awakens
-                Each wrong guess shortens your remaining time Hints are
-                available but cost time instead of lives
+                You have a limited time to guess the word before Dragon awakens.
+                Timer starts when the first guess is made. If time runs out, you
+                loose. Free hint available.
               </p>
             </div>
             <div class="category">
               <h3>Category</h3>
               <p>
-                Choose the name to guess from different categories Hints cost
-                lives
+                Choose the name to guess from different categories. Free hint
+                available.
               </p>
             </div>
             <div class="learning">
               <h3>Learning</h3>
               <p>
-                You are given a definition, and must name the word. Hints cost
-                lives
+                You are given a definition, and must name the word. No hints
+                available.
               </p>
             </div>
           </div>
