disable game modes when modals are open, so its not possible to click on them

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1>The Sleeping Dragon</h1>
           <h2>Guess a secret word before the dragon awakens</h2>
         </div>
-        <div class="game-modes">
+        <div class="game-modes" id="game-modes">
           <div class="mode" id="classical-mode">
             <h3>classical</h3>
             <p>Choose from three levels - easy, medium or difficult</p>
